--- a/ProxiJob/app/src/main/res/layout/activity_fake_p_e.xml
+++ b/ProxiJob/app/src/main/res/layout/activity_fake_p_e.xml
@@ -40,7 +40,9 @@
             android:fontFamily="@font/avenirltstd_medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"/>
+            android:inputType="textEmailAddress"
+            android:textColor="@color/colorWhite"
+            />
 
         <EditText
             android:id="@+id/password"
